// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "assets": [
    {
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1672,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "type": "chunk",
    },
  ],
  "errors": [
    {
      "message": "Failed to resolve not-exist",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 20,
      "type": "module",
    },
  ],
}
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1735,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "type": "chunk",
    },
  ],
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 26,
      "type": "module",
    },
  ],
}
`;
